<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        android:src="@drawable/image_first_question"
        android:background="@null"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/default_question"
        android:textColor="@color/text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_true"
        android:text="@string/button_first_answer"
        android:textColor="@color/color_primary_dark"
        android:backgroundTint="@color/yellow_background"
        app:strokeColor="@color/buttons_solid"
        app:strokeWidth="1dp"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_margin="16dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_false_answer"
        android:text="@string/button_second_answer"
        android:textColor="@color/color_primary_dark"
        android:backgroundTint="@color/yellow_background"
        app:strokeColor="@color/buttons_solid"
        app:strokeWidth="1dp"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button_true"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/button_next_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_next"
        android:textColor="@color/color_primary_dark"
        android:backgroundTint="@color/yellow_background"
        app:strokeColor="@color/buttons_solid"
        app:strokeWidth="1dp"
        app:cornerRadius="16dp"
        android:drawableEnd="@drawable/arrow_right"
        app:drawableTint="@color/color_primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/button_previous_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_previous"
        android:textColor="@color/color_primary_dark"
        android:backgroundTint="@color/yellow_background"
        app:strokeColor="@color/buttons_solid"
        app:strokeWidth="1dp"
        app:cornerRadius="16dp"
        android:drawableLeft="@drawable/arrow_left"
        app:drawableTint="@color/color_primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/button_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/yellow_background"
        android:text="@string/button_results"
        android:textColor="@color/color_primary_dark"
        android:textSize="32sp"
        android:visibility="invisible"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:strokeColor="@color/buttons_solid"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>